syntax = "proto3";

option go_package = "proto";

service Broker {
  rpc WatchSession(WatchSessionRequest) returns (stream WatchSessionResponse) {}
  rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse) {}
  rpc GetGameMetadata(GetGameMetadataRequest) returns (GetGameMetadataResponse) {}
}

message WatchSessionRequest {
  string allocated_server_id = 1;
}

message WatchSessionResponse {
  bool found = 1;
  Session session = 2;
}

message DeleteSessionRequest {
  string session_id = 1;
  string allocated_server_id = 2;
}

message DeleteSessionResponse {}

message Session {
  string session_id = 1;
  string allocated_server_id = 2;
  string game_id = 3;
}

message GetGameMetadataRequest {
  string game_id = 1;
}

message GetGameMetadataResponse {
  GameMetadata game_metadata = 1;
}

message GameMetadata {
  string body = 1;
}
